fixed weird overlapping / collapsing issue with certain sections (Tags, About, Comment)

--- a/frontend/src/Comments.module.css
+++ b/frontend/src/Comments.module.css
@@ -27,18 +27,19 @@
 }
 
 .comment-area {
-    min-width:100%;
-    height: 100px;
+    width: 100%;
+    height: 125px;
     border: 1px solid #eee;
     padding:1rem;
     outline:none;
     font-family: Arial, Helvetica, sans-serif;
+    resize: vertical;
     margin-bottom: 1.5rem;
     /* border:1px solid orange; */
 }
 
 .submit {
-    display:flex;
+    display:block;
     width:fit-content;
     padding: 12px 12px;
     font-size: 12px;
@@ -50,9 +51,11 @@
 }
 
   .form-container {
+    width:100%;
     display: flex;
     flex-direction: column;
     margin-bottom: 1rem;
+    /* border:1px solid red; */
   }
   .comment {
     display:flex;
